升级：切换jdk版本为 jdk25